# Classwork-PythonAIIntegratedDevelopment

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
20250209/: titanic.html  機器學習分類_鐵達尼號.ipynb
20250216/: CKIP.ipynb  CKIP1.ipynb  csv內容為文字的onehot編碼.ipynb  jieba操作.ipynb  opencc中文轉換.ipynb  情感分析.ipynb  文字雲.ipynb  異體字處理.ipynb  計算字出現次數.ipynb
20250216/data/: add.txt  data.txt  mayday1.txt  stopWords202405_jieba.txt  stopword1.txt  waimai_10k_tw.csv
20250302/: 0302文本資料處理.ipynb  0302神經網路相關操作.ipynb  0302神經網路相關操作1.ipynb  Doc2Vec_資料夾內文件分析與其他功能.ipynb  RNN.ipynb  文本資料處理.ipynb
20250302/data/CM/: CM001-清‧吳謙等編‧‧醫宗金鑑（訂正仲景全書傷寒論註）File_1039.txt  CM002-清‧吳謙等編‧‧醫宗金鑑(訂正仲景全書金匱要略註) File_1040.txt  CM017-春秋戰國‧佚名‧‧黃帝內經‧素問 File_1041.txt  CM018-春秋戰國‧佚名‧‧黃帝內經‧靈樞 File_1042.txt  CM019-金‧劉完素著‧‧素問玄機原病式 File_1043.txt  CM020-金‧劉完素著‧‧黃帝素問宣明論方 File_1044.txt  CM021-金‧劉完素著‧‧傷寒直格 File_1045.txt  CM022-金‧劉完素著‧‧傷寒標本心法類萃  File_1046.txt  CM023-金‧劉完素著‧‧傷寒心要 File_1047.txt  CM024-金‧劉完素著‧‧素問病機氣宜保命集  File_1048.txt  CM025-金‧張從正著‧‧傷寒心鏡別集 File_1049.txt  CM026-金‧張從正著‧‧儒門事親 File_1050.txt  CM027-金‧李杲著‧‧內外傷辨 File_1051.txt  CM028-金‧李杲著‧‧脾胃論 File_1052.txt  CM029-金‧李杲撰‧‧蘭室秘藏 File_1053.txt  CM030-金‧李杲著‧‧此事難知 File_1054.txt  CM031-元‧朱震亨著‧‧丹溪心法 File_1055.txt  CM032-元‧朱震亨著‧‧脈訣指掌病式圖說 File_1056.txt  CM033-元‧朱震亨著‧‧格致餘論 File_1057.txt  CM034-元‧朱震亨著‧‧局方發揮 File_1058.txt  CM035-元‧朱震亨著‧‧醫學發明 File_1059.txt  CM036-元‧朱震亨著‧‧金匱鉤玄 File_1060.txt  CM037-元‧朱震亨著‧‧活法機要  File_1061.txt  CM038-晉‧王叔和撰‧‧脈經 File_1062.txt  CM039-唐‧孫思邈撰‧‧千金翼方 File_1063.txt  CM040-春秋戰國‧秦越人撰‧‧難經 File_1064.txt
20250309/: BERT與MLP.ipynb  GRU.ipynb  LSTM.ipynb  LSTM_Attention.ipynb  LSTM_GRU.ipynb  LSTM的多與一的應對.ipynb  RNN.ipynb  優化器.ipynb
20250316/: transformer運用.ipynb
20250323/: BERT與MLP.ipynb  LSTM_GRU.ipynb  transformer運用.ipynb
scripts/: update.py
