[project]
name = "classwork-pythonaiintegrateddevelopment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "rich>=13.9.4",
    "python-dotenv>=1.1.0",
    "pandas[excel]>=2.2.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.1",
    "opencc>=1.1.9",
    "wordcloud>=1.9.4",
    "jieba>=0.42.1",
    "snownlp>=0.12.3",
]

[project.scripts]
update = "scripts.update:main"

[project.urls]
Repository = "https://github.com/chesterXalan/Classwork-PythonAIIntegratedDevelopment"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "commitizen>=4.4.1",
    "cz-conventional-gitmoji>=0.6.1",
    "shpyx>=0.0.32",
    "typer>=0.15.2",
]
type = [
    "pandas-stubs>=2.2.3.250308",
]
jupyter = [
    "notebook>=7.3.3",
    "ipywidgets>=8.1.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "scripts",
]


# ruff
# <https://docs.astral.sh/ruff/settings/>
[tool.ruff]
required-version = ">=0.9"
target-version = "py313"
output-format = "concise"
show-fixes = true
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    ### Intentionally disabled
    "T201",   # print found
    "E402",   # Module level import not at top of cell
    "E501",   # line-too-long (format 會自動處理)
    "COM819", # prohibited-trailing-commas (與 ruff format 同時使用時候，執行順序將影響結果)
    "COM812", # missing-trailing-comma (會與 ruff format 衝突)
    "ISC001", # ingle-line-implicit-string-concatenation (會與 ruff format 衝突)

    "S101",   # assert  (不允許使用 assert)
    "RUF001", # ambiguous-unicode-character-string (不要使用不明確的 Unicode 字元)
    "RUF002", # ambiguous-unicode-character-docstring (不要使用不明確的 Unicode 字元)
    "RUF003", # ambiguous-unicode-character-comment (不要使用不明確的 Unicode 字元)
    "TD003",  # missing-todo-link (TODO 沒有相關連結)
    "FIX002", # flake8-fixme (註釋包含 TODO)

    "S603",   # check for execution of untrusted input
    "D",      # pydocstyle
    "B008",   # unction-call-in-default-argument (不要在默認參數中調用函數)
    "FBT",    # flake8-boolean-trap (不要使用 True/False 作為函數的位置參數)
    "SIM117", # multiple-with-statements (不要使用嵌套 with)
    "EM",     # flake8-errmsg (錯誤訊息字串要先分配給變數)
    "TRY003", # raise-vanilla-args (自定義例外包含額外的長訊息)
    "TRY400", # error-instead-of-exception (logging 應該用 exception 取代 error)
]


[tool.ruff.lint.isort]
known-first-party = []
split-on-trailing-comma = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.pylint]
max-returns = 6
max-branches = 12
max-args = 6
max-statements = 50

# mypy
# <https://mypy.readthedocs.io/en/stable/config_file.html>
[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
pretty = true
# <https://mypy.readthedocs.io/en/stable/error_code_list2.html>
enable_error_code = [
    "possibly-undefined",
    "redundant-expr",
    "truthy-iterable",
    "explicit-override",
    "mutable-override",
]


# cz
# <https://commitizen-tools.github.io/commitizen/config/>
[tool.commitizen]
name = "cz_gitmoji"
